--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World - Green Theme</title>
+    <title>Hello World - Red Theme</title>
     <style>
         :root {
-            --primary-color: #2e7d32; /* Dark Green */
-            --secondary-color: #4caf50; /* Medium Green */
-            --accent-color: #81c784; /* Light Green */
-            --background-color: #e8f5e9; /* Very Light Green */
-            --text-color: #1b5e20; /* Very Dark Green Text */
+            /* Red Theme Variables */
+            --primary-color: #c62828; /* Red 800 - Dark Red */
+            --secondary-color: #f44336; /* Red 500 - Medium Red */
+            --accent-color: #ef5350; /* Red 400 - Light Red */
+            --background-color: #ffebee; /* Red 50 - Very Light Red */
+            --text-color: #b71c1c; /* Red 900 - Very Dark Red Text */
             --card-bg: #ffffff;
         }
 
@@ -55,6 +56,11 @@
             transform: translateY(-5px);
         }
 
+        h2 {
+            margin-top: 0;
+            color: var(--secondary-color);
+        }
+
         .quote-text {
             font-size: 1.5rem;
             font-style: italic;
@@ -76,6 +82,7 @@
             padding: 1rem;
             color: var(--primary-color);
             font-size: 0.9rem;
+            text-align: center;
         }
 
         @media (max-width: 600px) {
@@ -94,14 +101,14 @@
         <h1>Hello World</h1>
         
         <div class="card">
-            <h2 style="margin-top: 0; color: var(--secondary-color);">Quote of the Day</h2>
+            <h2>Quote of the Day</h2>
             <p class="quote-text">"Friendship is Love without his wings!"</p>
             <span class="quote-author">- Lord Byron</span>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2026 Green Theme Hello World</p>
+        <p>&copy; 2026 Red Theme Hello World</p>
     </footer>
 
 </body>
