--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World - Red Theme</title>
+    <title>Hello World - Orange Theme</title>
     <style>
         :root {
-            /* Red Theme Variables */
-            --primary-color: #c62828; /* Red 800 - Dark Red */
-            --secondary-color: #f44336; /* Red 500 - Medium Red */
-            --accent-color: #ef5350; /* Red 400 - Light Red */
-            --background-color: #ffebee; /* Red 50 - Very Light Red */
-            --text-color: #b71c1c; /* Red 900 - Very Dark Red Text */
+            /* Orange Theme Variables */
+            --primary-color: #e65100; /* Orange 900 - Dark Orange */
+            --secondary-color: #ff9800; /* Orange 500 - Medium Orange */
+            --accent-color: #ffcc80; /* Orange 200 - Light Orange */
+            --background-color: #fff3e0; /* Orange 50 - Very Light Orange */
+            --text-color: #bf360c; /* Deep Orange 900 - Very Dark Orange Text */
             --card-bg: #ffffff;
         }
 
@@ -108,7 +108,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 Red Theme Hello World</p>
+        <p>&copy; 2026 Orange Theme Hello World</p>
     </footer>
 
 </body>
