--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World - Orange Theme</title>
+    <title>Hello World - Purple Theme</title>
     <style>
         :root {
-            /* Orange Theme Variables */
-            --primary-color: #e65100; /* Orange 900 - Dark Orange */
-            --secondary-color: #ff9800; /* Orange 500 - Medium Orange */
-            --accent-color: #ffcc80; /* Orange 200 - Light Orange */
-            --background-color: #fff3e0; /* Orange 50 - Very Light Orange */
-            --text-color: #bf360c; /* Deep Orange 900 - Very Dark Orange Text */
+            /* Purple Theme Variables */
+            --primary-color: #4a148c; /* Purple 900 - Dark Purple */
+            --secondary-color: #9c27b0; /* Purple 500 - Medium Purple */
+            --accent-color: #ce93d8; /* Purple 200 - Light Purple */
+            --background-color: #f3e5f5; /* Purple 50 - Very Light Purple */
+            --text-color: #311b92; /* Deep Purple 900 - Very Dark Purple Text */
             --card-bg: #ffffff;
         }
 
@@ -108,7 +108,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 Orange Theme Hello World</p>
+        <p>&copy; 2026 Purple Theme Hello World</p>
     </footer>
 
 </body>
